--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -45,7 +45,7 @@ header button:hover {
 }
 
 /* Canvas Styling */
-#gameCanvas {
+/* #gameCanvas {
     display: block;
     position: absolute;
     top: 60px; 
@@ -55,7 +55,7 @@ header button:hover {
     background-size: cover;
     background-position: center;
     z-index: 1;
-}
+} */
 
 /* Inventory Panel Styling */
 #inventory {
@@ -103,6 +103,16 @@ header button:hover {
     margin-right: 10px;
 }
 
+.hidden {
+    display: none;
+}
+
+.visible {
+    display: block;
+}
+
+
+
 /* Dialogue Overlay Styling */
 #dialogue-overlay, #input-overlay {
     position: fixed;
@@ -149,6 +159,60 @@ header button:hover {
     cursor: pointer;
     border-radius: 4px;
     transition: background-color 0.3s;
+}
+
+/* CHOOSE STARTING PLANET Select Styling */
+#planet-select{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+    margin-bottom: 20px;
+    background-color: black;
+    color: white;
+    transition: opacity 0.3s ease, visibility 0.3s ease;
+}
+
+/* PLAYER NAME PROMPT */
+#player-name-submit-btn {
+    padding: 8px 16px;
+    font: 16px 'Cinzel', serif;
+    background-color: darkred;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+    border-radius: 4px;
+    transition: background-color 0.3s;
+    }
+    
+
+#player-name-input {
+    background-color: black;
+    color: #fff;
+    padding: 8px;
+    width: 80%;
+    margin-bottom: 10px;
+    border: 1px solid #fff;
+    border-radius: 4px;
+    font: 16px 'Cinzel', serif;
+}
+
+
+
+#start-exploring-btn {
+    padding: 8px 16px;
+    background-color: #444;
+    font: 16px 'Cinzel', serif;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+    border-radius: 4px;
+    transition: background-color 0.3s;
+}
+
+#start-exploring-btn:hover {
+    background-color: #666;
 }
 
 #dialogue-close-btn:hover, #player-name-submit-btn:hover {
