--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -44,6 +44,36 @@ header button:hover {
     background-color: #666;
 }
 
+
+/* PLANET SELECTION */
+/* Planet Selection Dropdown */
+#planet-select {
+    padding: 8px;
+    width: 80%;
+    border: 1px solid #fff;
+    border-radius: 4px;
+    background-color: #333;
+    color: #fff;
+    font-size: 16px;
+    margin-bottom: 10px;
+}
+
+/* Confirm Planet Button */
+#confirm-planet-btn {
+    padding: 8px 16px;
+    font-size: 16px;
+    background-color: #444;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+    border-radius: 4px;
+    transition: background-color 0.3s;
+}
+
+#confirm-planet-btn:hover {
+    background-color: #666;
+}
+
 /* Canvas Styling */
 /* #gameCanvas {
     display: block;
@@ -266,6 +296,10 @@ header button:hover {
 
     #input-content input {
         width: 70%;
+    }
+
+    #planet-select {
+        width: 100%;
     }
 }
 
