--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -217,6 +217,15 @@ header button:hover {
     box-shadow: 0 0 15px rgba(255, 255, 255, 0.2);
 }
 
+#dialogue-video {
+    width: 100%;
+    max-width: 600px;
+    height: auto;
+    margin-top: 20px;
+    border-radius: 8px;
+}
+
+
 #dialogue-text {
     margin-bottom: 20px;
     font-size: 18px;
@@ -269,23 +278,6 @@ header button:hover {
     border: 1px solid #fff;
     border-radius: 4px;
     font: 16px 'Cinzel', serif;
-}
-
-
-/* -------------------------------------------------------------------------START EXPLORING SECTIOB */
-#start-exploring-btn {
-    padding: 8px 16px;
-    background-color: #444;
-    font: 16px 'Cinzel', serif;
-    color: #fff;
-    border: none;
-    cursor: pointer;
-    border-radius: 4px;
-    transition: background-color 0.3s;
-}
-
-#start-exploring-btn:hover {
-    background-color: #666;
 }
 
 #dialogue-close-btn:hover, #player-name-submit-btn:hover {
@@ -353,6 +345,10 @@ header button:hover {
 
     #dialogue-text {
         font-size: 16px;
+    }
+
+    #dialogue-video {
+        max-width: 90%;
     }
 
     #dialogue-close-btn, #player-name-submit-btn {
