--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -325,7 +325,7 @@ header button:hover {
 }
 
 /* -------------------------------------------------------------JUMPSCARE OVERLAY */
-#jumpscare-overlay {
+.jumpscare-overlay {
     position: fixed;
     top: 0;
     left: 0;
@@ -340,6 +340,10 @@ header button:hover {
     cursor: pointer;
     opacity: 0;
     transition: opacity 0.5s ease-in-out;
+}
+
+.jumpscare-overlay.visible {
+    opacity: 1;
 }
 
 /* -----------------------------------------------------------------------Responsive Design */
